# Code_Agent_Bot

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/stores/: auth.ts  chat.ts
src/agent/: chat.py  client.py  config.py  errors.py  logging_setup.py  router.py  test.py
src/agent/tools/: __init__.py  fx.py  timez.py  weather.py  wiki.py
src/api/: __init__.py  app.py  server.py
src/api/routes/: auth.py  chat.py  health.py  sessions.py
src/core/: agent.py  analyzer.py  config.py  container.py  critic.py  exceptions.py  executor.py  orchestrator.py  planner.py  router.py
src/core/llm/: base.py
src/core/mcp/: base.py
src/core/skills/: base.py  definitions.py  registry.py
src/infra/: logging.py
src/infra/auth/: __init__.py  dependencies.py  jwt.py  password.py
src/infra/database/: __init__.py  connection.py  models.py  repositories.py
src/infra/llm/: openai.py
src/infra/mcp/: code_analysis.py  external.py  filesystem.py
src/infra/tools/: __init__.py  code_analysis.py  filesystem.py
src/interface/cli/: main.py
src/interface/ui/: console.py
tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_sessions.py
